<resources>
    <string name="app_name">Cor-Aid</string>
    <string name="greetings">Greetings!</string>
    <string name="helpline">Helpline</string>
    <string name="call_helpline">Call Helpline</string>
    <string name="government_site">Government Site</string>
    <string name="_24x7_helpline">24x7 Helpline</string>
    <string name="schedule_a_visit">Schedule a Visit</string>
    <string name="information">Information</string>
    <string name="created_by_team_eyrc_1928">Created by Team eYRC#1928</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="address">Address:</string>
    <string name="submit_data">Submit Data</string>
    <string name="help_required">Help Required:</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="name">Name</string>
    <string name="visit_date">Visit Date:</string>
    <string name="instructions">Instructions</string>
    <string name="point1">The \'Cor-Aid\' app allows the NGO to know your location. Stay where you are or within your designated area. Stay away from other people and the NGO will provide you with its services. You will be informed when they will arrive to help.</string>
    <string name="Title">Instructions you must follow to ensure safety of your family and yourself:- </string>
    <string name="point2">1. Adopt practical measures to stay safe.</string>
    <string name="point3">2. Frequently wash your hands.</string>
    <string name="point4">3. Cover your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately. </string>
    <string name="point5">4. Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or sneezing.</string>
    <string name="point6">5. Avoid spitting in public.</string>
    <string name="point7">6. If you have a fever, cough and difficulty breathing, seek medical care early.</string>
</resources>
