<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="5dp"
    android:showDividers="middle"
    android:divider="@drawable/empty_divider">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="36sp"
        android:textAlignment="center"
        android:typeface="serif"
        android:gravity="center_horizontal">

    </TextView>

    <Button
        android:id="@+id/schedule"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:fadingEdge="horizontal"
        android:background="@color/turq"
        android:paddingLeft="10dp"
        android:text="@string/schedule_a_visit"
        android:textSize="26dp"
        android:typeface="serif"
        android:drawableLeft="@drawable/ic_schedule_black_24dp">
    </Button>


    <Button
        android:id="@+id/info"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:fadingEdge="horizontal"
        android:background="@color/pastelRed"
        android:paddingLeft="10dp"
        android:text="@string/instructions"
        android:textSize="30dp"
        android:typeface="serif"
        android:drawableLeft="@drawable/ic_info_outline_black_24dp">
    </Button>

    <Button
        android:id="@+id/helpline"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:fadingEdge="horizontal"
        android:background="@color/lightGreen"

        android:paddingLeft="10dp"
        android:text="@string/helpline"
        android:textSize="30sp"
        android:typeface="serif"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/ic_call_black_24dp">

    </Button>

    <Button
        android:id="@+id/news"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:background="@color/darkGreen"

        android:drawableStart="@drawable/ic_news"
        android:drawableLeft="@drawable/ic_news"
        android:fadingEdge="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="15dp"
        android:text="News"
        android:textSize="30sp"
        android:typeface="serif">

    </Button>

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/created_by_team_eyrc_1928"
        android:textAlignment="center"
        android:textSize="18dp"
        android:gravity="center_horizontal">

    </TextView>

</LinearLayout>

</ScrollView>
