<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    tools:context=".HelpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="424dp"
        android:layout_height="152dp"

        android:src="@drawable/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="576dp"
        android:src="@drawable/corona_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

    </ImageView>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24x7_helpline"
        android:textColor="#01F4FE"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.653"
        tools:ignore="MissingConstraints">

    </TextView>

    <Button
        android:id="@+id/site"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/government_site"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/call"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/call"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:text="@string/call_helpline"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>